fixed center alignment of the bottom section

--- a/style.css
+++ b/style.css
@@ -119,11 +119,12 @@ background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox=
 }
 
 .contact {
-    width: 80%;
+    width: 50%;
     padding: 100px 20px;
     gap: 5rem;
     display: flex;
     justify-content: center;
+    margin: 0 auto;
 }
 
 .contact form {
